adds disallowAdditionalPropertiesIfNotPresent when generating client using openapi-generator
