# internal/provider/instance_resource.go
@@ -401,7 +401,12 @@ func createInstance(plan temboInstanceResourceModel,
 		plan.OrgId.ValueString())
 
 	instance, response, err := instanceRequest.CreateInstance(createInstance).Execute()
+
 	if err != nil {
+		resp.Diagnostics.AddError(
+			"Error creating Tembo Instance",
+			"Could not create instance, unexpected error: "+err.Error(),
+		)
 		resp.Diagnostics.AddError(
 			"Error creating Tembo Instance:",
 			"Could not create Tembo Instance, unexpected error: "+getErrorFromResponse(response),
@@ -439,6 +444,10 @@ func restoreInstance(plan temboInstanceResourceModel,
 	instance, response, err := instanceRequest.RestoreInstance(restoreInstance).Execute()
 	if err != nil {
 		resp.Diagnostics.AddError(
+			"Error restoring Tembo Instance",
+			"Could not create instance, unexpected error: "+err.Error(),
+		)
+		resp.Diagnostics.AddError(
 			"Error restoring Tembo Instance:",
 			"Could not restore Tembo Instance, unexpected error: "+getErrorFromResponse(response),
 		)
@@ -461,6 +470,10 @@ func (r *temboInstanceResource) Read(ctx context.Context, req resource.ReadReque
 	// Get refreshed Instance value from API
 	instance, response, err := r.temboInstanceConfig.client.InstanceAPI.GetInstance(ctx, state.OrgId.ValueString(), state.InstanceID.ValueString()).Execute()
 	if err != nil {
+		resp.Diagnostics.AddError(
+			"Error reading Tembo Instance",
+			"Could not read instance, unexpected error: "+err.Error(),
+		)
 		resp.Diagnostics.AddError(
 			"Error Reading Tembo Instance",
 			"Could not read Tembo Instance ID "+state.InstanceID.ValueString()+": "+getErrorFromResponse(response),
@@ -555,6 +568,10 @@ func (r *temboInstanceResource) Update(ctx context.Context, req resource.UpdateR
 	if err != nil {
 		resp.Diagnostics.AddError(
 			"Error Updating Tembo Instance",
+			"Could not update instance, unexpected error: "+err.Error(),
+		)
+		resp.Diagnostics.AddError(
+			"Error Updating Tembo Instance",
 			"Could not update Tembo Instance ID "+plan.InstanceID.ValueString()+": "+getErrorFromResponse(response),
 		)
 		return
@@ -600,9 +617,12 @@ func (r *temboInstanceResource) Delete(ctx context.Context, req resource.DeleteR
 	ctx = context.WithValue(ctx, temboclient.ContextAccessToken, r.temboInstanceConfig.accessToken)
 
 	// Delete existing Tembo Instance
-	_, response, err := (*r.temboInstanceConfig.client.InstanceAPI).DeleteInstance(ctx, state.OrgId.ValueString(), state.InstanceID.ValueString()).Execute()
+	_, response, err := (r.temboInstanceConfig.client.InstanceAPI).DeleteInstance(ctx, state.OrgId.ValueString(), state.InstanceID.ValueString()).Execute()
 	if err != nil {
-
+		resp.Diagnostics.AddError(
+			"Error Deleting Tembo Instance",
+			"Could not delete instance, unexpected error: "+err.Error(),
+		)
 		resp.Diagnostics.AddError(
 			"Error Deleting Tembo Instance",
 			"Could not delete instance, unexpected error: "+getErrorFromResponse(response),
